force-app/main/default/objects/QDX_Log__e/fields/QDX_Class__c.field-meta.xml
<CustomField>
    <fullName>QDX_Class__c</fullName>
    <label>Class</label>
    <length>80</length>
    <type>Text</type>
</CustomField>