force-app/main/default/objects/QDX_Log__e/fields/QDX_Context__c.field-meta.xml
<CustomField>
    <fullName>QDX_Context__c</fullName>
    <label>Context</label>
    <length>80</length>
    <type>Text</type>
</CustomField>