force-app/main/default/objects/QDX_Log__e/fields/QDX_Level__c.field-meta.xml
<CustomField>
    <fullName>QDX_Level__c</fullName>
    <label>Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>