force-app/main/default/objects/QDX_Log__e/fields/QDX_Line__c.field-meta.xml
<CustomField>
    <fullName>QDX_Line__c</fullName>
    <label>Line</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>