force-app/main/default/objects/QDX_Log__e/fields/QDX_Method__c.field-meta.xml
<CustomField>
    <fullName>QDX_Method__c</fullName>
    <label>Method</label>
    <length>80</length>
    <type>Text</type>
</CustomField>