force-app/main/default/objects/QDX_Log__e/fields/QDX_User__c.field-meta.xml
<CustomField>
    <fullName>QDX_User__c</fullName>
    <label>User</label>
    <length>18</length>
    <type>Text</type>
</CustomField>