force-app/main/default/objects/QDX_Log__e/fields/QDX_UserName__c.field-meta.xml
<CustomField>
    <fullName>QDX_UserName__c</fullName>
    <label>UserName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>